--- a/TrinhTest/Views/Shared/_Layout_Login.cshtml
+++ b/TrinhTest/Views/Shared/_Layout_Login.cshtml
@@ -34,5 +34,7 @@
     <div class="trinhtext">
         @RenderBody()
     </div>
+     <div class="position-fixed bottom-1 end-1 z-index-2" id="MS_Notification">
+        </div>
 </body>
 </html>
