--- a/TrinhTest/Views/Pages/Dash/Dash_Master.cshtml
+++ b/TrinhTest/Views/Pages/Dash/Dash_Master.cshtml
@@ -350,8 +350,7 @@
             node.addEventListener("click", e => {
             removeActive(element);
             $("#"+"Layout_"+e.target.children[1].innerText).addClass("show");
-            document.getElementById(e.target.id).classList.add('active');
-            console.log(window.location.href.replace(window.location.pathname,("@Url.Action("PriceServices","Settings")"+ "?ver=" + versionofWebApplication)));
+            document.getElementById(e.target.id).classList.add('active');)";
             $("#MainRenderBody").html('');
             $("#MainRenderBody").load("@Url.Action("PriceServices","Settings")"+ "?ver=" + versionofWebApplication);
             $('#MainRenderBody').show();
