--- a/TrinhTest/Views/Pages/Login/Login.cshtml
+++ b/TrinhTest/Views/Pages/Login/Login.cshtml
@@ -94,7 +94,7 @@
                                                     <span class="input-group-text">
                                                         <i class="fas fa-user-alt"></i>
                                                     </span>
-                                                    <input id="username" type="text" class="inforlogin ps-2 form-control" placeholder="eg .username">
+                                                    <input id="username" autocomplete="off" type="text" class="inforlogin ps-2 form-control" placeholder="eg .username">
                                                 </div>
                                             </div>
                                         </div>
@@ -105,7 +105,7 @@
                                                     <span class="input-group-text">
                                                         <i class="fas fa-eye-slash show_pass_icon"></i>
                                                     </span>
-                                                    <input id="password" type="text" class="inforlogin ps-2  sercu form-control" placeholder="eg .password">
+                                                    <input id="password" type="text" autocomplete="off" class="inforlogin ps-2  sercu form-control" placeholder="eg .password">
                                                 </div>
                                             </div>
 
