--- a/TrinhTest/Views/Pages/Setting/PriceServices/SettingPriceServices.cshtml
+++ b/TrinhTest/Views/Pages/Setting/PriceServices/SettingPriceServices.cshtml
@@ -7,7 +7,7 @@
 <script src="./js/Common/initialize_setting.js"></script>
 <div class="container-fluid py-3 px-0">
     <div class="row">
-        <div class="col-12 col-lg-10">
+        <div class="col-12">
             <div class="card ">
                 <div class="card-header pb-0 p-3">
                     <div class="d-lg-flex">
