--- a/TrinhTest/Views/Pages/Dash/Dash_Master.cshtml
+++ b/TrinhTest/Views/Pages/Dash/Dash_Master.cshtml
@@ -27,7 +27,7 @@
                                     <div class="numbers">
                                         <p class="text-sm mb-0 text-capitalize font-weight-bold">Doctor</p>
                                         <h5 class="font-weight-bolder mb-0">
-                                            <span id="Dash_User_Doctor" countto="123"></span>
+                                            <span id="Dash_User_Doctor" countto="0">0</span>
                                         </h5>
                                     </div>
                                 </div>
@@ -48,7 +48,7 @@
                                     <div class="numbers">
                                         <p class="text-sm mb-0 text-capitalize font-weight-bold">Patient</p>
                                         <h5 class="font-weight-bolder mb-0">
-                                            <span id="Dash_Price_Patient" countto="123"></span>
+                                            <span id="Dash_Price_Patient" countto="0">0</span>
                                         </h5>
                                     </div>
                                 </div>
@@ -69,7 +69,7 @@
                                     <div class="numbers">
                                         <p class="text-sm mb-0 text-capitalize font-weight-bold">Appointment</p>
                                         <h5 class="font-weight-bolder mb-0">
-                                            <span id="Dash_User_Appointment" countto="123">456</span>
+                                            <span id="Dash_User_Appointment" countto="0">0</span>
                                         </h5>
                                     </div>
                                 </div>
@@ -90,7 +90,7 @@
                                     <div class="numbers">
                                         <p class="text-sm mb-0 text-capitalize font-weight-bold">Prescription</p>
                                         <h5 class="font-weight-bolder mb-0">
-                                            <span id="Dash_User_Prescription" countto="123">456</span>
+                                            <span id="Dash_User_Prescription" countto="0">0</span>
                                         </h5>
                                     </div>
                                 </div>
@@ -120,7 +120,7 @@
     var MasterDataMenu = [
           {
               "Name":"Dashboards"
-              ,"Img":"",
+              ,"Img":"fa fa-tachometer",
               "child":[
                   {"Name":"Dashboards"
                     ,"ChildNode":[]
@@ -146,7 +146,7 @@
           },
           {
               "Name":"Doctor"
-              ,"Img":"",
+              ,"Img":"fa fa-user-md",
               "child":[
                   {"Name":"Chats"
                     ,"ChildNode":[]
@@ -177,7 +177,7 @@
           },
           {
               "Name":"Patient"
-              ,"Img":""
+              ,"Img":"fa fa-users"
               ,"child":[
                   {
                       "Name":"Kanban"
@@ -201,13 +201,13 @@
           },
           {
               "Name":"Nurse"
-              ,"Img":""
+              ,"Img":"fa fa-user-md"
               ,"child":[
               ]
           }
           ,{
               "Name":"Pharmacist"
-              ,"Img":""
+              ,"Img":"fa fa-graduation-cap"
               ,"child":[
                   {
                       "Name":"Overview"
@@ -269,32 +269,32 @@
           }
           ,{
               "Name":"Laboratorist"
-              ,"Img":""
+              ,"Img":"fa fa-flask"
               ,"child":[]
           }
           ,{
               "Name":"Appointment"
-              ,"Img":""
+              ,"Img":"fa fa-calendar-plus-o"
               ,"child":[]
           }
           ,{
               "Name":"Payment"
-              ,"Img":""
+              ,"Img":"fa fa-money"
               ,"child":[]
           }
            ,{
               "Name":"Blood Bank"
-              ,"Img":""
+              ,"Img":"fa fa-university"
               ,"child":[]
           }
           ,{
               "Name":"Medicine"
-              ,"Img":""
+              ,"Img":"fa fa-medkit"
               ,"child":[]
           }
           ,{
               "Name":"Report"
-              ,"Img":""
+              ,"Img":"fa fa-flag"
               ,"child":[
                   {
                       "Name":"Operation Report"
@@ -324,7 +324,7 @@
           }
           ,{
               "Name":"Settings"
-              ,"Img":""
+              ,"Img":"fa fa-cogs"
               ,"child":[
                   {
                       "Name":"Noticeboard"
@@ -385,21 +385,31 @@
     let body = document.getElementsByTagName('body')[0];
     let className = 'g-sidenav-pinned';
     $(document).ready(function (){
-        let idSumCoun="Dash_Price_Services_Accessing";
         ShowMenuMater();
         CloseMneuMater();
+        LoadDataUser();
        LoadMenuMater("sidenav-collapse-main");
-       DashMasterCountUpNumber('Dash_User_Doctor');
         $("#Layout_EditUser").addClass('active');
          $("#Dashboards").addClass('show');
          eleClickMenuDash();
         LoadDataPriceServices();
         LoadTempMessages();
-         if (document.getElementById(idSumCoun).hasAttribute("countTo")) {
-                     document.getElementById(idSumCoun).setAttribute("countTo", localStorage.getItem("X-SumPrice"));
-                     DashMasterCountUpNumber(idSumCoun);
-             };
     });
+    //Load head dashboard
+    function LoadDataUser(){
+         AjaxLoad(url = "/api/Mater/LoadDataHeardDashBoard"
+            , data = {
+            }, async = true, error = null
+            , success = function (result) {
+                if (result != "") {
+                    let data=JSON.parse(result);
+                    DashMasterCountUpNumber("Dash_User_Doctor",data[0].APPOINTMENT_COUNT);
+                    DashMasterCountUpNumber("Dash_Price_Patient",data[0].DOCTOR_COUNT);
+                    DashMasterCountUpNumber("Dash_User_Prescription",data[0].PATIENT_COUNT);
+                    DashMasterCountUpNumber("Dash_User_Appointment",data[0].PRESCRIPTION_COUNT);
+                }
+            });
+    }
     // execute click child node menu dash
     function eleClickMenuDash(){
          var ele=document.querySelectorAll('.settingCollapse');
@@ -409,7 +419,6 @@
             if($("#"+e.target.children[1].innerText).hasClass("show")){
                 $("#"+e.target.children[1].innerText).removeClass("show");
                 document.getElementById(e.target.id).setAttribute("aria-expanded", false);
-                console.log(e.target.querySelector('div'))
                 e.target.querySelector('div').classList.remove("bg-gradient-light");
             }
             else{
@@ -436,7 +445,10 @@
         })
         });
     }
-    function DashMasterCountUpNumber(id){
+    function DashMasterCountUpNumber(id,valueCount){
+        if (document.getElementById(id).hasAttribute("countTo")) {
+                     document.getElementById(id).setAttribute("countTo", valueCount);
+             };
         if (document.getElementById(id)) {
           const countUp = new CountUp(id, document.getElementById(id).getAttribute("countTo"));
           if (!countUp.error) {
@@ -448,7 +460,6 @@
     }
     ////
     function ExecuteText(){
-        console.log($('#form_Career'));
          $('#form_Career').form('validate form');
          if ($('#accountDetail').form('is valid')) {
          }
@@ -462,22 +473,10 @@
             if(item.child.length >0){
                 replaceDataCollapse='data-bs-toggle="collapse" aria-controls='+item.Name+' role="button" aria-expanded="false"'
             }
-            let tr ='<li class="nav-item settingCollapse">'
-                    +'<a '+replaceDataCollapse+' id="'+item.Name+'collapse" class="nav-link">'
+            let tr ='<li class="nav-item">'
+                    +'<a '+replaceDataCollapse+' id="'+item.Name+'collapse" class="nav-link cursor-pointer settingCollapse">'
                     +'<div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center d-flex align-items-center justify-content-center me-2">'
-                    +'<svg width="12px" height="12px" viewBox="0 0 45 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">'
-                    +'<title>shop </title>'
-                    +'<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">'
-                    +'<g transform="translate(-1716.000000, -439.000000)" fill="#FFFFFF" fill-rule="nonzero">'
-                    +'<g transform="translate(1716.000000, 291.000000)">'
-                    +'<g transform="translate(0.000000, 148.000000)">'
-                    +'<path class="color-background" d="M46.7199583,10.7414583 L40.8449583,0.949791667 C40.4909749,0.360605034 39.8540131,0 39.1666667,0 L7.83333333,0 C7.1459869,0 6.50902508,0.360605034 6.15504167,0.949791667 L0.280041667,10.7414583 C0.0969176761,11.0460037 -1.23209662e-05,11.3946378 -1.23209662e-05,11.75 C-0.00758042603,16.0663731 3.48367543,19.5725301 7.80004167,19.5833333 L7.81570833,19.5833333 C9.75003686,19.5882688 11.6168794,18.8726691 13.0522917,17.5760417 C16.0171492,20.2556967 20.5292675,20.2556967 23.494125,17.5760417 C26.4604562,20.2616016 30.9794188,20.2616016 33.94575,17.5760417 C36.2421905,19.6477597 39.5441143,20.1708521 42.3684437,18.9103691 C45.1927731,17.649886 47.0084685,14.8428276 47.0000295,11.75 C47.0000295,11.3946378 46.9030823,11.0460037 46.7199583,10.7414583 Z" opacity="0.598981585"></path>'
-                    +'<path class="color-background" d="M39.198,22.4912623 C37.3776246,22.4928106 35.5817531,22.0149171 33.951625,21.0951667 L33.92225,21.1107282 C31.1430221,22.6838032 27.9255001,22.9318916 24.9844167,21.7998837 C24.4750389,21.605469 23.9777983,21.3722567 23.4960833,21.1018359 L23.4745417,21.1129513 C20.6961809,22.6871153 17.4786145,22.9344611 14.5386667,21.7998837 C14.029926,21.6054643 13.533337,21.3722507 13.0522917,21.1018359 C11.4250962,22.0190609 9.63246555,22.4947009 7.81570833,22.4912623 C7.16510551,22.4842162 6.51607673,22.4173045 5.875,22.2911849 L5.875,44.7220845 C5.875,45.9498589 6.7517757,46.9451667 7.83333333,46.9451667 L19.5833333,46.9451667 L19.5833333,33.6066734 L27.4166667,33.6066734 L27.4166667,46.9451667 L39.1666667,46.9451667 C40.2482243,46.9451667 41.125,45.9498589 41.125,44.7220845 L41.125,22.2822926 C40.4887822,22.4116582 39.8442868,22.4815492 39.198,22.4912623 Z"></path>'
-                    +'</g>'
-                    +'</g>'
-                    +'</g>'
-                    +'</g>'
-                    +'</svg>'
+                    +'<i class="'+item.Img+' text-secondary"></i>'
                     +'</div>'
                     +'<span class="">'+item.Name
                     +'</span>'
