--- a/TrinhTest/Views/Shared/_Layout.cshtml
+++ b/TrinhTest/Views/Shared/_Layout.cshtml
@@ -68,6 +68,7 @@
     <script src="./lib/jquery-validation/dist/semantic.min.js"></script>
     <script src="./Assets/js/plugins/datatables.js"></script>
     <script src='./Assests/dist/Paginationjs/paginationjs.min.js'></script>
+     <script src="../../Assets/js/plugins/chartjs.min.js"></script>
      <link href='./Assests/dist/Paginationjs/paginationjs.min.css' rel="stylesheet" />
 </head>
 <body class="g-sidenav-show bg-gray-100 " id="BodyMain">
