--- a/TrinhTest/Views/Pages/Products/Products.cshtml
+++ b/TrinhTest/Views/Pages/Products/Products.cshtml
@@ -1,10 +1,8 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@page
 @{
     Layout = null;
 }
-<script src="./js/Common/initialize_setting.js"></script>
+@Html.AntiForgeryToken()
 <div class="container-fluid py-3 px-0">
     <div class="row">
         <div class="col-12">
@@ -112,6 +110,8 @@
         </div>
     </div>
 </div>
+<script src="./Assests/dist/UploadJS/js/main.js"></script>
+<script src="./js/Common/initialize_setting.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
 
